core/codegen/tests/ui-fail-stable/catchers.stderr
error: expected `,`
 --> tests/ui-fail-stable/catchers.rs:4:25
  |
4 |     let _ = catchers![a b];
  |                         ^
  |
  = note: this error originates in the macro `catchers` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected identifier
 --> tests/ui-fail-stable/catchers.rs:6:26
  |
6 |     let _ = catchers![a::, ];
  |                          ^
  |
  = note: this error originates in the macro `catchers` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of input, expected identifier
 --> tests/ui-fail-stable/catchers.rs:7:13
  |
7 |     let _ = catchers![a::];
  |             ^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `catchers` (in Nightly builds, run with -Z macro-backtrace for more info)
